# MACHINE-LEARNING-NEO

./: pyproject.toml  requirements_conda.yml  requirements_pip.txt  validation_predictions.csv
competition/: final_dz_ZubchykMM.ipynb  final_model_xgb.pkl  submission.csv
datasets/final/: final_proj_test.csv
datasets/final/data/: final_proj_sample_submission.csv
datasets/final/results/: submission.csv  submission_xgboost.csv
derived/: mod_07_topic_13_mlpipe.html
homework/: dz_topic_03_ZubchykMM.ipynb  dz_topic_04_ZubchykMM.ipynb  dz_topic_05_ZubchykMM.ipynb  dz_topic_08_ZubchykMM.ipynb  dz_topic_10_ZubchykMM.ipynb  final_dz_ZubchykMM.ipynb  final_project_analysis+.py  final_project_analysis.py
models/: mod_07_topic_13_mlpipe.joblib
notebooks/: mod_02_topic_04_time_series.ipynb  mod_03_topic_05_logistic_regression.ipynb  mod_03_topic_06_decision_tree.ipynb  mod_04_topic_07_bayes_knn.ipynb  mod_04_topic_08_svm.ipynb  mod_05_topic_09_ensembles.ipynb  mod_05_topic_10_feature_engineering.ipynb  mod_06_topic_11_pca.ipynb
notebooks/HW/: dz_topic_3_ZubchykMM.ipynb
scripts/: mod_02_topic_04_time_series.py  mod_03_topic_06_decision_tree.py  mod_04_topic_07_bayes_knn.py  mod_05_topic_09_ensembles.py  mod_06_topic_11_pca.py
