[project]
name = "ml-fundamental"
version = "0.1.0"
description = "Practice and home work"
authors = [
    {name = "Mykola Zubchyk",email = "m.zubchyk@warbirds.com.ua"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "category-encoders (>=2.8.1,<3.0.0)",
    "imblearn (>=0.0,<0.1)",
    "xgboost (>=3.0.0,<4.0.0)",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
